--- a/src/app/indoor-plants/indoor-plants.component.html
+++ b/src/app/indoor-plants/indoor-plants.component.html
@@ -42,6 +42,8 @@
             <!-- <div class="card-secondary-details"> -->
         </div>
     </div>
+
+    <button class="show-more-button" (click)="showMore()">Покажи още</button>
 </div>
 
 <div [style.display]="isMobileSortActive ? 'flex' : 'none'" class="side-sort-wrapper">
@@ -251,4 +253,6 @@
             <!-- <div class="card-secondary-details"> -->
         </div>
     </div>
+    
+    <button class="show-more-button" (click)="showMore()">Покажи още</button>
 </div>
