--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="main-nav">
         <ul>
-            <li>
+            <li routerLink="/Indoor-plants">
                 За дома
             </li>
             <li>
