--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -31,6 +31,7 @@
             .tabs ul li{
                 padding-bottom: 10px;
                 border-bottom: 1px solid #25523B;
+                cursor: pointer;
             }
 
             .tabs-active{
@@ -51,6 +52,7 @@
             font-weight: bold;
 
             color: #25523B;
+            cursor: pointer;
         }
   
   .text-center {
@@ -69,6 +71,7 @@
     width: calc(100% - 40px);
     padding: 20px;
     border: 1px solid rgb(255, 239, 224);
+    font-size: 1.2rem;
   }
   
   .button-primary {
@@ -86,7 +89,7 @@
   }
   
   .button-primary:hover {
-    color: lightgray;
+    background-color:  #163525;
   }
   
   @media (max-width: 425px) {
@@ -94,11 +97,37 @@
         width: 80%;
         height: 70%;
       }
+
+      .input-field{
+        font-size: 0.9rem;
+    }
   }
 
   @media (min-width:426px) and (max-width: 1023px) {
     .login-container {
         width: 50%;
         height: 70%;
-      }
+    }
+
+    .input-field{
+        font-size: 0.95rem;
+    }
+  }
+
+  @media (min-width: 1440px) {
+    .tabs{
+        font-size: 1.4rem;
+    }
+
+    .login-container{
+        width: 27%;
+    }
+
+    .login-form h1{
+        font-size: 1.7rem;
+    }
+
+    .button-primary{
+        font-size: 1.5rem;
+    }
   }
