Added JwtDecode and DecodedToken model; Implemented login functionallity with the server.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,7 +9,7 @@
             </li>
         </ul>
     </div>
-    <form class="login-form">
+    <form class="login-form" (ngSubmit)="onSubmit()">
         <h1>
             Влизане
         </h1>
