--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -48,8 +48,7 @@
             align-self: start;
             margin-bottom: 1rem;
 
-            font-size: 1.6rem;
-            font-weight: bold;
+            font-size: 1.5rem;
 
             color: #25523B;
             cursor: pointer;
@@ -77,6 +76,7 @@
   .button-primary {
     width: 60%;
     padding: 15px;
+    margin-top: .7rem;
     border: none;
 
     background-color: #25523B;
