--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -75,6 +75,11 @@
     border: 1px solid rgb(255, 239, 224);
     font-size: 1.2rem;
   }
+
+    .input-field:focus{
+      border: 2px solid #25523B;
+      outline: none;
+    }
   
   .button-primary {
     width: 60%;
