--- a/src/app/product-details/product-details.component.css
+++ b/src/app/product-details/product-details.component.css
@@ -126,6 +126,43 @@
                 gap: 1.5rem;
             }
 
+        .quantity-wrap{
+            display: grid;
+            grid-template-columns: auto 1fr auto;
+
+            height: 2.1rem;
+            justify-self: start;
+            line-height: 2rem;
+
+            border-radius: 1.5rem;
+            border: 1px solid rgb(255, 239, 224);
+            padding: 3px 6px;
+        }
+
+            .quantity-input{
+                font-size: 1.1rem;
+                background: 0 0;
+                border: 0!important;
+                text-align: center;
+                display: inline-block;
+                max-width: 2rem;
+                width: auto;
+            }
+
+            /* Removing the arrows in text fields */
+
+            /* Chrome, Safari, Edge, Opera */
+            input::-webkit-outer-spin-button,
+            input::-webkit-inner-spin-button {
+                -webkit-appearance: none;
+                margin: 0;
+            }
+
+            /* Firefox */
+            input[type=number] {
+                -moz-appearance: textfield;
+            }
+
         .add-to-cart-btn{
             display: inline-block;
             justify-self: center;
