--- a/src/app/checkout/checkout.component.css
+++ b/src/app/checkout/checkout.component.css
@@ -246,6 +246,48 @@
                     width: 100%;
                 }
 
+                .quantity-wrap{
+                    display: grid;
+                    grid-template-columns: auto 1fr auto;
+                
+                    height: 1.6rem;
+                    justify-self: start;
+                    line-height: 1.6rem;
+                
+                    border-radius: 1.5rem;
+                    border: 1px solid rgb(255, 239, 224);
+                    padding: 3px 6px;
+                }
+
+                .quantity-wrap span{
+                    cursor: pointer;
+                }
+                
+                    .quantity-input{
+                        font-size: 1.1rem;
+                        background: 0 0;
+                        border: 0!important;
+                        text-align: center;
+                        display: inline-block;
+                        max-width: 1.6rem;
+                        width: auto;
+                        cursor: pointer;
+                    }
+                
+                    /* Removing the arrows in text fields */
+                
+                    /* Chrome, Safari, Edge, Opera */
+                    input::-webkit-outer-spin-button,
+                    input::-webkit-inner-spin-button {
+                        -webkit-appearance: none;
+                        margin: 0;
+                    }
+                
+                    /* Firefox */
+                    input[type=number] {
+                        -moz-appearance: textfield;
+                    }
+
                 .row-1{
                     margin-bottom: 0.7rem;
                 }
