--- a/src/app/product-details/product-details.component.css
+++ b/src/app/product-details/product-details.component.css
@@ -139,6 +139,10 @@
             padding: 3px 6px;
         }
 
+            .quantity-wrap span{
+                cursor: pointer;
+            }
+
             .quantity-input{
                 font-size: 1.1rem;
                 background: 0 0;
