--- a/src/app/checkout/checkout.component.css
+++ b/src/app/checkout/checkout.component.css
@@ -338,6 +338,43 @@
                     border-top: 1px solid rgb(215, 215, 215);
                 }
 
+                .empty-cart-container{
+                    height: calc(60vh);
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                
+                    .empty-cart-content{
+                        max-width: 450px;
+                        max-height: 450px;
+                    }
+                
+                    .empty-cart-content h1{
+                        text-align: center;
+                        font-size: 1.2rem;
+                        font-weight: 600;
+                        color: #25523B;
+                    }
+                
+                    .empty-cart-btn{
+                        width: 100%;
+                        animation: 0.3s ease 1s 1 normal none running shake-animation;
+                        background-color: #25523B;
+                        color: rgb(255, 255, 255);
+                        cursor: pointer;
+                        outline: none;
+                        margin-top: 10%;
+                        font-size: 1.1rem;
+                        font-weight: bold;
+                        text-align: center;
+                        border-radius: 2px;
+                        text-decoration: none;
+                        border: 0px;
+                        padding: 16px 30px;
+                    }
+
 @media (max-width: 376px) {
     .full-text{
         display: none;
@@ -357,6 +394,10 @@
 @media (max-width: 425px) {
     .checkout-container{
         max-width: 88% !important;
+    }
+
+    .empty-cart-container{
+        height: 75vh;
     }
 }
 
