Implemented HasMoreProducts functionallity which hides the show-more button in indoor-plants if there are no more products.

--- a/src/app/indoor-plants/indoor-plants.component.html
+++ b/src/app/indoor-plants/indoor-plants.component.html
@@ -254,5 +254,5 @@
         </div>
     </div>
     
-    <button *ngIf="products.length > 0" class="show-more-button" (click)="showMore()">Покажи още</button>
+    <button *ngIf="products.length > 0 && hasMoreProducts" class="show-more-button" (click)="showMore()">Покажи още</button>
 </div>
