--- a/src/app/indoor-plants/indoor-plants.component.html
+++ b/src/app/indoor-plants/indoor-plants.component.html
@@ -34,6 +34,9 @@
         <button (click)="addToCart(product)" class="add-to-cart-btn">
             Добави в количка
         </button>
+        <div class="add-to-favorite-btn">
+            <i class="fa-regular fa-heart"></i>
+        </div>
         <div class="card-details-grid">
             <div class="card-details">
                 <h1>{{product.name}}</h1>
@@ -245,6 +248,9 @@
         <button (click)="addToCart(product)" class="add-to-cart-btn">
             Добави в количка
         </button>
+        <div class="add-to-favorite-btn">
+            <i class="fa-regular fa-heart"></i>
+        </div>
         <div class="card-details-grid">
             <div class="card-details">
                 <h1>{{product.name}}</h1>
