--- a/src/app/indoor-plants/indoor-plants.component.css
+++ b/src/app/indoor-plants/indoor-plants.component.css
@@ -410,6 +410,31 @@
                 background-color: rgb(255, 239, 224);
               }
 
+              .add-to-favorite-btn {
+                position: absolute;
+                top: 1rem;
+                right: 1rem;
+                color: #25523B;
+                font-size: 1rem;
+
+                background-color: rgb(253, 250, 245);
+                border: 1px solid #25523B;
+                border-radius: 50%; /* To create a circular button */
+                width: 1.5rem;
+                height: 1.5rem;
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                cursor: pointer;
+                transition: linear 0.2s;
+            }
+            
+            .add-to-favorite-btn:hover {
+                background-color: rgb(255, 239, 224);
+            }
+
 @media (max-width: 325px) {
     .nav li{
         font-size: 0.95rem;
@@ -424,6 +449,11 @@
 @media (max-width: 700px) {
     .side-sort{
         width: 70%;
+    }
+
+    .add-to-favorite-btn {
+        top: 0.8rem;
+        right: 0.8rem;
     }
 }
 
