--- a/src/app/favourite/favourite.component.html
+++ b/src/app/favourite/favourite.component.html
@@ -8,7 +8,7 @@
 
 <!-- mobile -->
 
-<!-- <div class="mobile-products-container">
+<div class="mobile-products-container">
     <div *ngFor="let product of products" class="card">
         <img (click)="redirectToDetails(product.id)" [src]="getBase64ImageUrl(product.picturesData[0])" alt="Product image">
         <button (click)="addToCart(product)" class="add-to-cart-btn">
@@ -24,12 +24,10 @@
             </div>
         </div>
     </div>
-
-    <button *ngIf="products.length > 0" class="show-more-button" (click)="showMore()">Покажи още</button>
-</div> -->
+</div>
 
 <!-- end of mobile -->
-<!-- 
+
 <div class="container">
     <div class="products-container">
         <div *ngFor="let product of products" class="card">
@@ -48,6 +46,4 @@
             </div>
         </div>
     </div>
-    
-    <button *ngIf="products.length > 0 && hasMoreProducts" class="show-more-button" (click)="showMore()">Покажи още</button>
-</div> -->
+</div>
