--- a/src/app/indoor-plants/indoor-plants.component.html
+++ b/src/app/indoor-plants/indoor-plants.component.html
@@ -251,7 +251,7 @@
         <div *ngIf="isFavourite(product.id) === false" class="add-to-favorite-btn" (click)="addProductToUserFavourites(product.id)">
             <i class="fa-regular fa-heart"></i>
         </div>
-        <div *ngIf="isFavourite(product.id)" class="add-to-favorite-btn" (click)="addProductToUserFavourites(product.id)">
+        <div *ngIf="isFavourite(product.id)" class="add-to-favorite-btn" (click)="deleteFromFavourites(product.id)">
             <i class="fa-solid fa-heart"></i>
         </div>
         <div class="card-details-grid">
