--- a/src/app/favourite/favourite.component.css
+++ b/src/app/favourite/favourite.component.css
@@ -286,6 +286,43 @@
                 background-color: rgb(255, 239, 224);
             }
 
+            .empty-favorite-container{
+                height: calc(60vh);
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            
+                .empty-favorite-content{
+                    max-width: 450px;
+                    max-height: 450px;
+                }
+            
+                .empty-favorite-content h1{
+                    text-align: center;
+                    font-size: 1.2rem;
+                    font-weight: 600;
+                    color: #25523B;
+                }
+            
+                .empty-favorite-btn{
+                    width: 100%;
+                    animation: 0.3s ease 1s 1 normal none running shake-animation;
+                    background-color: #25523B;
+                    color: rgb(255, 255, 255);
+                    cursor: pointer;
+                    outline: none;
+                    margin-top: 10%;
+                    font-size: 1.1rem;
+                    font-weight: bold;
+                    text-align: center;
+                    border-radius: 2px;
+                    text-decoration: none;
+                    border: 0px;
+                    padding: 16px 30px;
+                }
+
 @media (max-width: 700px) {
     .side-sort{
         width: 70%;
@@ -294,6 +331,19 @@
     .add-to-favorite-btn {
         top: 0.8rem;
         right: 0.8rem;
+    }
+
+    .empty-favorite-container{
+        height: 75vh;
+    }
+
+    .empty-favorite-content{
+        max-width: 80vw;
+    }
+
+    .empty-favorite-btn{
+        font-size: 1rem;
+        padding: 12px 26px;
     }
 }
 
