--- a/src/app/favourite/favourite.component.html
+++ b/src/app/favourite/favourite.component.html
@@ -1,4 +1,4 @@
-<div class="header-container">
+<div *ngIf="products.length > 0" class="header-container">
     <div class="header">
         <p>
             Любими
@@ -8,7 +8,7 @@
 
 <!-- mobile -->
 
-<div class="mobile-products-container">
+<div *ngIf="products.length > 0" class="mobile-products-container">
     <div *ngFor="let product of products" class="card">
         <img (click)="redirectToDetails(product.id)" [src]="getBase64ImageUrl(product.picturesData[0])" alt="Product image">
         <button (click)="addToCart(product)" class="add-to-cart-btn">
@@ -28,7 +28,7 @@
 
 <!-- end of mobile -->
 
-<div class="container">
+<div *ngIf="products.length > 0" class="container">
     <div class="products-container">
         <div *ngFor="let product of products" class="card">
             <img (click)="redirectToDetails(product.id)" [src]="getBase64ImageUrl(product.picturesData[0])" alt="Product image">
@@ -45,5 +45,14 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
+
+<!-- no favorite products-->
+<div *ngIf="products.length <= 0" class="empty-favorite-container">
+    <div class="empty-favorite-content">
+        <h1>Нямате продукти добавени като любими!</h1>
+
+        <button routerLink="" class="empty-favorite-btn">Обратно към пазаруване</button>
     </div>
 </div>
