Added my-orders component; Updated profile component - added new page layout with navbar and content layout.

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,2 +1,17 @@
-<p>profile works!</p>
-<button (click)="Logout()">Излез</button>
+<div class="profile-container">
+    <div class="profile-nav">
+        <ul>
+            <li class="active">
+                <i class="fa-solid fa-truck-fast"></i>
+                Моите поръчки
+            </li>
+            <li>
+                <i class="fa-solid fa-lock"></i>
+                Сигурност
+            </li>
+        </ul>
+    </div>
+    <div class="content-container">
+        asdasd
+    </div>
+</div>
