--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -2,16 +2,16 @@
     <div class="profile-nav">
         <ul>
             <li (click)="SelectItemIndex(1)" [class.active]="selectedIndex === 1">
-                <i class="fa-solid fa-truck-fast"></i>
+                <i class="fa-solid fa-cart-flatbed fa-fw"></i>
                 Моите поръчки
             </li>
             <li (click)="SelectItemIndex(2)" [class.active]="selectedIndex === 2">
-                <i class="fa-solid fa-lock"></i>
+                <i class="fa-solid fa-lock fa-fw"></i>
                 Сигурност
             </li>
         </ul>
     </div>
     <div class="content-container">
-        
+        <router-outlet></router-outlet>
     </div>
 </div>
