--- a/src/app/my-orders/my-orders.component.html
+++ b/src/app/my-orders/my-orders.component.html
@@ -13,6 +13,9 @@
                 <img alt="Image of the product" src="assets/card.png">
             </div>
         </div>
+        <div class="order-date">
+            <p>Май 2023</p>
+        </div>
     </div>
 
     <div class="order-container">
@@ -26,6 +29,9 @@
             <div class="order-img">
                 <img alt="Image of the product" src="assets/card.png">
             </div>
+        </div>
+         <div class="order-date">
+            <p>Май 2023</p>
         </div>
     </div>
 </div>
